* Fix #214: Whitebox.invokeConstructor may not work as expected with overloaded constructors
* Fix #590: suppress(method) doesn't work on a @Spy/PowerMockito.spy
* Fix #634/#632: Add workaround as fix  for Mockito 1+. Wait fix from Mockito team for Mockito 2.
* Fix #648: TestNG SkipException doesn't work with PowerMock
* Added support for @TestSubject in EasyMock API. This is the equivalent of @InjectMocks in Mockito (big thanks to Arthur Zagretdinov for pull request)
* Added experimental support for mockito 2.x
* Upgraded commons-logging dependency to version 1.2
* Upgraded objenesis dependency to version 2.2
* Upgraded TestNG dependency to version 6.9.10.
* ASM for PowerMock Javaagent repackaged from new version 5.0.4

Change log 1.6.4 (2015-12-11)
-----------------------------
* DelegatingPowerMockRunner now implements Filterable interface to allow running for example individual test methods (thanks to chang-chao for pull request)
* Fixed jacoco/powermock integration issue (thanks to Evgeny Astafyev for pull request)
* Improvements to StackTraceCleanerProvider which cleans powermock classes from a stack trace
* Replaced usage of uberjar mockito-all with mockito-core (thanks to Petr Široký and René Scheibe for helping out)
* Code quality improvement, constructors only call non-overridable methods (thanks to Christian Ivan for pull request)

Change log 1.6.3 (2015-10-02)
----------------------------
* Mock name in @Mock(name="abc") annotations are no longer ignored for the Mockito API extension
* Fixed NPE in withArguments() constructor (thanks to Tomoyuki Saito for pull request)
* Upgraded Javassist dependency to version 3.20.0-GA.
* Using soft reference in classloader cache
* MockClassloader now extends Javassist Loader classloader to implement findClass etc
* PowerMock now works better with ByteBuddy (issue 579)